# aivideo_scripts

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  start.bat  start.sh  vite.config.js
backend/: Dockerfile  main.py  pyproject.toml
src/: App.vue  main.js
src/components/: Settings.vue
src/composables/: useSettings.js
src/router/: index.js
src/services/: api.js
src/views/: ComposeView.vue  PreviewView.vue  PromptGeneratorView.vue  StoryboardView.vue
